# esm-sae

./: .gitignore  README.md  pyproject.toml
src/esm_sae/: __init__.py  analyze.py  cluster.py  cluster_ff.py  clusters_to_json.py  embed_clusters.py  embed_uniref.py  esmc.py  loss.py  pt_to_npy.py  train.py
src/esm_sae/analysis/: __init__.py  analyze.py  cluster_ff.py  feature_visualizer.py  infer.py
src/esm_sae/evaluation/: __init__.py  concept_detection.py  concept_metrics.py  domain_f1.py  download_datasets.py  embed_tsv.py  evaluation_config.py  load_data.py  prepare_data.py  run_eval.py  run_evaluation.py  sae_feature_activations.py  utils.py  visualization.py
src/esm_sae/evaluation/.ipynb_checkpoints/: embed_tsv-checkpoint.py  load_data-checkpoint.py  run_evaluation-checkpoint.py
src/esm_sae/preprocessing/: __init__.py  embed_uniref.py  get_features.py  subsample_cluster.py  subset_uniref_fasta.py
src/esm_sae/sae/: __init__.py  inference.py  model.py  train.py
